# kenobase

./: .gitignore  .pre-commit-config.yaml  00_KENO_ALL_V5.py.md  =0.14.0  =0.44.0  Agent.md  Anweisungen für keno Analysis.md  BESTE_STRATEGIEN.md  BESTE_STRATEGIEN_v1_backup.md  Bauplan 00_Keno_6-Kombi_Analyse.md  CLAUDE.md  Datenfluss_Diagram_00_KENO_ALL_V5.py.md  Keno Programm Bauplan.md  Keno_Pulse.xlsx  Keno_Webscrapping_Code.md  Logik_00_KENO_ALL_V5.py.md  Projekt_Keno_zahlen_Suche.md  README.md  cycles_exhaustive_analysis_plan.yaml  keno Betrug.md  lotto_page_debug.html  pyproject.toml  pytest.ini  requirements.txt  test_config_quick.py
AI_COLLABORATION/: AGENT.md  SUPERVISOR.md  SYSTEM_STATUS.json  SYSTEM_STATUS.md  VALIDATION_PROTOCOL.md
Keno_GPTs/: KENO_10K.xlsx  keno_10k.txt  keno_10k1 - Kopie.txt
Old_Code/: 00_EJ_Check copy.py  00_EJ_Check.py  00_EJ_Check_v0.py  00_EJ_check_v1.py  00_EJ_check_v2.py  00_EJ_check_v3-1.py  00_EJ_check_v3.py  00_EJ_check_v4.py  00_EJ_check_v5.py  00_EJ_check_v6.py  00_EJ_check_v7.py  00_KENO_ALL_V1.py  00_KENO_ALL_V2.py  00_KENO_ALL_V3.py  Alteration_keno_Zahlen.py  Limitation_des_70_Nombre.py  List_comprehension.py  Text_Transform.py  Visualisierung keno.py  Visualisierung keno_Filter.py  Web_Scrapping_v2_+_Year.py  classe_socratica.py  copi_text_Transform.py  copi_text_Transform2.py  csv_module.py  liste-slicing.py  paypal_cleanup.py  pythonlesen.txt  send_text_to_Alexa_windows.py  send_text_to_Alexa_windows.spec  send_text_to_TTS_DIKTAT_V1.py  tempCodeRunnerFile.py  test_dicoV2.py  test_dictionary.py  text.txt  text1.txt  (+3 more)
(+5996 files in other folders)
